prusti-tests/tests/verify_overflow/ui/counterexamples/union-2.stderr
error: [Prusti: verification error] the asserted expression might not hold
  --> $DIR/union-2.rs:24:5
   |
24 |     assert!(value.1 == 1);
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
note: the failing assertion is here
  --> $DIR/union-2.rs:24:5
   |
24 |     assert!(value.1 == 1);
   |     ^^^^^^^^^^^^^^^^^^^^^
note: counterexample for "maybe"
       value:   MaybeUninit {
            uninit: (),
        }
  --> $DIR/union-2.rs:11:21
   |
11 |       let mut maybe = MaybeUninit {
   |  _____________________^
12 | |         uninit: (),
13 | |     };
   | |_____^
note: counterexample for "maybe"
       value:   MaybeUninit {
            value: (
                1,
                ?,
            ),
        }
  --> $DIR/union-2.rs:20:5
   |
20 |     maybe.value.0 = 1;
   |     ^^^^^^^^^^^^^^^^^
note: counterexample for "maybe"
       value:   MaybeUninit {
            value: (
                1,
                2,
            ),
        }
  --> $DIR/union-2.rs:21:5
   |
21 |     maybe.value.1 = 2;
   |     ^^^^^^^^^^^^^^^^^
note: counterexample for "value"
       value:   (
            1,
            2,
        )
  --> $DIR/union-2.rs:22:26
   |
22 |     let value = unsafe { maybe.value };
   |                          ^^^^^^^^^^^
   = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

